# toss-auto-trader

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  PUBLISH_MANIFEST.md  README.md  RESULTS.md  config.example.yaml  pubspec.yaml  pyproject.toml
docs/: ACTIVE_STATE_COMPACT.md  AI_TRADER_EXTERNAL_SWEEP.md  API_SETUP.md  BUILDUP.md  CONTINUOUS_PAPER_IMPROVEMENT.md  DECISION_CENTRIC_ARCHITECTURE.md  HISTORICAL_BACKTEST.md  KR_EXTERNAL_METHOD_RESEARCH_2026-07-18.md  KR_FOREIGN_MICROSTRUCTURE_RESEARCH_2026-07-19.md  KR_GAP_INTEGRITY_RESEARCH_2026-07-23.md  KR_NOVEL_FEATURE_RESEARCH_2026-07-18.md  KR_STRATEGY_BROAD_RESEARCH_2026-07-18.md  LEARNING_FINDINGS.md  LIVE_ORDER_APPROVAL_FLOW.md  LOW_CAPITAL_SELECTION.md  NEWS_API_OPTIONS.md  PAPER_TRADING_LOOP.md  PORTFOLIO_PAIR_BACKTEST.md  RISK_POLICY.md  SECRET_HANDLING.md  STRATEGY_DISCOVERY_LOOP.md  STRATEGY_EDGE_AUDIT.md  US_MARKET_RESEARCH_2026-07-18.md
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
lib/: ai_coach.dart  ai_plan_screen.dart  app.dart  app_copy.dart  app_prefs.dart  app_state.dart  app_theme.dart  auth_screen.dart  batters_eye_scope.dart  home_screen.dart  main.dart  onboarding_gate.dart  onboarding_intro_screen.dart  pitch_motion.dart  pitch_scene.dart  placement.dart  placement_screen.dart  profile_screen.dart  result_screen.dart  session.dart  settings_screen.dart  training_screen.dart
mydocs/: README.md
research/: event_news_queries.txt  kosdaq_symbols.txt  news_event_symbol_map.csv  pre_registered_hypotheses.json  strategy_research_policy.json
(+174 files in other folders)
